--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_place_preview">PlacePreviewActivity</string>
     <string name="pet_pal_splash_title">Explore the World with Your Furry Friends</string>
     <string name="pet_pal_splash_text">Discover pet-friendly destinations and plan memorable adventures with Pet Pal Places, the ultimate pet travel app. Whether you\'re seeking dog-friendly hikes, cat-friendly accommodations, or bird-friendly parks, our app is your trusted companion for exploring the world alongside your beloved pets.</string>
+    <string name="post_title">Post</string>
 </resources>
